<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragment.ListMembersFragment">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title_type_it_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="79dp"
                android:fontFamily="@font/comfortaa_light"
                android:lineHeight="34.5dp"
                android:text="@string/text_type_it_state"
                android:textColor="@color/text_color_black"
                android:textSize="31sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_type_it_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="122dp"
                android:background="@drawable/edit_text_search_shape"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/text_hint_et"
                android:lineHeight="18dp"
                android:padding="17dp"
                android:textColorHint="@color/text_color_black"
                app:layout_constraintLeft_toLeftOf="@id/title_type_it_members"
                app:layout_constraintTop_toBottomOf="@id/title_type_it_members" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ok_list_save_fragment"
                android:layout_width="90dp"
                android:layout_height="52dp"
                android:layout_marginEnd="19dp"
                android:background="@drawable/shape_button_ok"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/text_ok"
                android:textColor="@color/white"
                app:layout_constraintLeft_toRightOf="@id/et_type_it_state"
                app:layout_constraintTop_toTopOf="@id/et_type_it_state" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_saves"
                android:layout_width="53dp"
                android:layout_height="15dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/text_save"
                android:textColor="@color/text_color_black"
                app:layout_constraintLeft_toLeftOf="@id/title_type_it_members"
                app:layout_constraintTop_toBottomOf="@id/et_type_it_state" />

            <ProgressBar
                android:id="@+id/pb_load"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_deputies"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_saves"
                app:spanCount="3"
                tools:itemCount="9"
                tools:listitem="@layout/item_members" />

            <TextView
                android:id="@+id/text_load_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginBottom="20dp"
                android:paddingBottom="10dp"
                android:text="@string/load_more"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_deputies"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>