<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout


            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".DetailsCongressPersonFragment">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_person_details"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="40dp"
                android:src="@drawable/ic_baseline_person"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_atualization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/message_atualization"
                android:textColor="@color/text_color_black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_person_details" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_member_details"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_atualization"
                android:fontFamily="@font/comfortaa_light"
                android:gravity="center"
                android:textColor="@color/text_color_black"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:text="JOAO DA SILVA" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/email_members_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/text_color_black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_member_details"
                tools:text="DEP.JULIOCESARRIBERIO@CAMARA.LEG.BR" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/shape_button_ok"
                android:fontFamily="@font/roboto_bold"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_members_details" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send_email_details"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/edit_text_search_shape"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/text_send_email"
                android:textColor="@color/text_color_black"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_save_details" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_date_of_birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/text_date_of_birth"
                android:textColor="@color/text_color_black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_send_email_details" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_number_date_of_birth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/text_color_black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/tv_name_date_of_birth"
                app:layout_constraintRight_toRightOf="@id/tv_name_date_of_birth"
                app:layout_constraintTop_toBottomOf="@id/tv_name_date_of_birth"
                tools:text="26/06/1997" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_party"
                android:layout_width="0dp"
                app:layout_constraintTop_toTopOf="@+id/tv_name_date_of_birth"
                app:layout_constraintBottom_toBottomOf="@+id/tv_name_date_of_birth"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/text_party"
                android:textColor="@color/text_color_black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_send_email_details" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_party"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_party"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/text_color_black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_party"
                tools:text="PP" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/text_phone"
                android:textColor="@color/text_color_black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_number_date_of_birth" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_number_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/text_color_black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/tv_name_phone"
                app:layout_constraintTop_toBottomOf="@id/tv_name_phone"
                tools:text="33333333" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_situation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/text_situation"
                android:textColor="@color/text_color_black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_party"
                app:layout_constraintTop_toTopOf="@id/tv_name_phone"
                app:layout_constraintTop_toBottomOf="@id/tv_name_party" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_status_situation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/text_color_black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_name_situation"
                app:layout_constraintTop_toBottomOf="@id/tv_name_situation"
                tools:text="EXERCÍCIO" />

            <View
                android:id="@+id/line_center"
                android:background="@color/color_line"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_number_phone"
                android:layout_height="1dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_expenses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/text_expenses"
                android:textColor="@color/text_color_black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_center" />

            <ProgressBar
                android:id="@+id/pb_load"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/item_details_expenses"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:paddingBottom="60dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_expenses"
                app:spanCount="15"
                tools:itemCount="15"
                tools:listitem="@layout/item_expenses" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>